# Swimba-Pipeline

./: .gitignore  pyproject.toml
src/swimba_pipeline/: cleanup.py  compute_Pk.py  convert_ic.py  convert_params.py  fix_electrons.py  make_1P.py  make_CMD.py  make_CV.py  make_LH.py  make_SB.py  make_mesh.py  make_run.py  postprocess.py  swift2gadget.py
src/swimba_pipeline/data/: 1P_params.txt  check.sh  default.yml  post_processing.sh  subfind_params.txt
src/swimba_pipeline/data/copy_files/: job.sh  output.yml
src/swimba_pipeline/data/copy_files/photometry/: README
src/swimba_pipeline/data/copy_files/photometry/GAMA/: H  J  K  Y  g  i  r  u  z
src/swimba_pipeline/data/copy_files/yieldtables/: POPIII.hdf5  POPIII_Lifetimes.hdf5  SNII.hdf5
